// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings displays error message when an invalid API key is entered to match snapshot 1`] = `
<div>
  <a
    aria-disabled="true"
    class="nhsuk-button nhsuk-button--disabled"
    draggable="false"
    role="button"
  >
    Hide
     Settings
  </a>
  <div
    class="nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="api-key-input"
      id="api-key-input--label"
    >
      OpenAi API Key
    </label>
    <span
      class="nhsuk-error-message"
      id="api-key-input--error-message"
      role="alert"
    >
      <span
        class="nhsuk-u-visually-hidden"
      >
        Error: 
      </span>
      provide a valid OpenAi API Key
    </span>
    <input
      aria-labelledby="api-key-input--label"
      class="nhsuk-input nhsuk-input--error"
      id="api-key-input"
      name="api key"
      type="password"
      value="invalid-api-key"
    />
  </div>
  <div
    class="flex space-x-2 mt-6"
  >
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary"
      type="submit"
    >
      Save
    </button>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary"
      type="submit"
    >
      Clear
    </button>
  </div>
</div>
`;

exports[`Settings rendered component should match snapshot 1`] = `
<div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    draggable="false"
    role="button"
  >
    Show
     Settings
  </a>
</div>
`;

exports[`Settings should render the component with the correct button text to match snapshot 1`] = `
<div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    draggable="false"
    role="button"
  >
    Hide
     Settings
  </a>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="api-key-input"
      id="api-key-input--label"
    >
      OpenAi API Key
    </label>
    <input
      aria-labelledby="api-key-input--label"
      class="nhsuk-input"
      id="api-key-input"
      name="api key"
      type="password"
      value=""
    />
  </div>
  <div
    class="flex space-x-2 mt-6"
  >
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary"
      type="submit"
    >
      Save
    </button>
    <button
      aria-disabled="false"
      class="nhsuk-button nhsuk-button--secondary"
      type="submit"
    >
      Clear
    </button>
  </div>
</div>
`;
